feat: Add ParamsList component for workflow editor

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -137,9 +137,9 @@
                 display: flex;
                 gap: @margin-xxs;
                 align-items: center;
-                margin-bottom: @margin-md;
+                margin-bottom: @margin-sm;
                 font-weight: @font-weight-medium;
-                .text-size(@font-size-lg);
+                .text-size(@font-size-base);
 
                 .@{prefix}-tooltip {
                     display: flex;
