feat: Optimize form styles for workflows

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -179,6 +179,10 @@
         padding-bottom: @padding-xxs;
         margin-bottom: @margin-md;
         border-bottom: 1px solid var(--border-color-base);
+
+        .@{prefix}-code-editor {
+            margin-bottom: @margin-md;
+        }
     }
 }
 
