--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
@@ -35,5 +35,11 @@
             margin-left: @margin-xs;
             color: var(--text-color-secondary);
         }
+
+        .@{prefix}-param-input-select {
+            &-chip {
+                top: 8px;
+            }
+        }
     }
 }
