--- a/apps/web/src/pages/workflow/views/editor/components/controls/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/controls/style.less
@@ -35,7 +35,7 @@
 .@{prefix}-workflow-controls-tooltip-popper {
     .@{mui-prefix}Tooltip-tooltip b {
         display: inline-block;
-        width: 18px;
+        padding: 0 @padding-xxs;
         text-align: center;
         background-color: var(--gray-color-8);
         border-radius: 2px;
