feat: Optimized node configs

--- a/apps/web/src/pages/workflow/views/editor/components/entry-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/entry-panel/style.less
@@ -86,6 +86,8 @@
             &-info {
                 position: relative;
                 z-index: 1;
+                flex: 1;
+                width: 0;
             }
 
             &-name {
