feat: Add common NodeAvatar component

--- a/apps/web/src/pages/workflow/components/action-log/components/header/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/header/style.less
@@ -8,19 +8,8 @@
         flex: 1;
         overflow: hidden;
 
-        &__icon {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 24px;
-            height: 24px;
+        .@{prefix}-workflow-node-avatar {
             margin-right: @margin-xs;
-            color: var(--white);
-            border-radius: @border-radius-xs;
-
-            .MuiSvgIcon-root {
-                font-size: @font-size-md;
-            }
         }
 
         &__name {
