--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -87,7 +87,7 @@
 
         > .@{mui-prefix}FormControl-root {
             flex: 1;
-            margin: 0;
+            margin: 0 !important;
         }
     }
 
