--- a/apps/web/src/pages/workflow/views/editor/components/node-menu/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/node-menu/style.less
@@ -12,19 +12,8 @@
             font-weight: @font-weight-medium;
         }
 
-        .icon {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 24px;
-            height: 24px;
+        .@{prefix}-workflow-node-avatar {
             margin-right: @margin-sm;
-            color: var(--white);
-            border-radius: @border-radius-sm;
-
-            .@{mui-prefix}SvgIcon-root {
-                font-size: @font-size-lg;
-            }
         }
     }
 }
