--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -104,7 +104,7 @@
         width: 100%;
         height: 100%;
 
-        &-main {
+        &-wrapper {
             position: relative;
             flex: 1;
             width: 100%;
@@ -116,6 +116,11 @@
             &__fullscreen {
                 padding-top: @margin-md;
             }
+        }
+
+        &-main {
+            position: relative;
+            width: 100%;
 
             & > div {
                 height: 100%;
