--- a/apps/web/src/plugin/plugins/image/view/style.less
+++ b/apps/web/src/plugin/plugins/image/view/style.less
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: @padding-md;
+    // padding: @padding-md;
     background-color: var(--component-background);
     border-radius: @border-radius-md;
 
