fix: Optimized workflow node interactions

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -10,13 +10,11 @@
     }
 
     &.readonly {
-        .@{prefix}-workflow-panel-config-body {
-            pointer-events: none;
-        }
-
-        .@{prefix}-node-form-group-title,
-        .@{prefix}-code-editor-header__operations {
-            pointer-events: all;
+        .@{prefix}-node-form-group {
+            .@{prefix}-node-form-group-actions,
+            .@{prefix}-node-form-group-item {
+                pointer-events: none;
+            }
         }
     }
 }
