--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
@@ -29,7 +29,7 @@
                 margin-top: @margin-xs;
                 .text-size(@font-size-lg);
 
-                .@{prefix}-tooltip {
+                .@{prefix}-tooltip:first-child {
                     flex: 1;
                     width: 0;
                 }
