--- a/apps/web/src/plugin/plugins/image/view/style.less
+++ b/apps/web/src/plugin/plugins/image/view/style.less
@@ -35,6 +35,7 @@
     &__img {
         width: 100%;
         max-width: 100%;
+        height: 100%;
         object-fit: cover;
         border-style: none;
         border-radius: @border-radius-base;
