feat: chart entity position icon style adjustment

--- a/apps/web/src/plugin/components/chart-entity-position/style.less
+++ b/apps/web/src/plugin/components/chart-entity-position/style.less
@@ -29,6 +29,14 @@
         > .@{mui-prefix}Autocomplete-root {
             flex: 1;
         }
+
+        .delete-icon-wrapper {
+            display: flex;
+            align-items: center;
+            align-self: flex-end;
+            justify-content: center;
+            min-height: 36px;
+        }
     }
 
     &__label {
