fix: Select component when the renderValue is not configured, the label should be used instead

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -73,7 +73,8 @@
                     margin-left: -11px;
                     
                     .@{mui-prefix}Typography-root {
-                        margin-bottom: 0;
+                        margin-bottom: 2px;
+                        line-height: @font-size-3;
                     }
                 }
             }
