--- a/apps/web/src/pages/entity/components/add-modal/components/single-enums-input/style.less
+++ b/apps/web/src/pages/entity/components/add-modal/components/single-enums-input/style.less
@@ -42,6 +42,12 @@
 
         .field-key {
             flex: 1;
+
+            input {
+                height: 28px;
+                padding-top: 0;
+                padding-bottom: 0;
+            }
         }
         
         .@{mui-prefix}FormLabel-root {
