fix: Fixed add a timestamp to the file name of the entity data export

--- a/apps/web/src/pages/entity/components/add-modal/components/single-enums-input/style.less
+++ b/apps/web/src/pages/entity/components/add-modal/components/single-enums-input/style.less
@@ -71,6 +71,7 @@
     .@{prefix}-param-assign-input-add-btn {
         display: flex;
         align-items: center;
+        width: fit-content;
         font-size: @font-size-base;
         color: var(--primary-color-7);
         cursor: pointer;
