feat: Support to use system SMTP settings in email node

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/email-send-source/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/email-send-source/style.less
@@ -1,7 +1,16 @@
 .@{prefix}-workflow-email-config {
     position: relative;
 
-    &__type {
+    & &__checkbox {
         margin-bottom: @margin-md;
+
+        .@{mui-prefix}Checkbox-root {
+            padding: 0;
+            margin-right: @margin-xs;
+        }
+
+        .@{mui-prefix}Typography-root {
+            margin-bottom: 0;
+        }
     }
 }
