fix: ns device synchronization defaultValue cannot modified and value after modal selection is incorrect

--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/gateway-device/component/sync-able-device/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/gateway-device/component/sync-able-device/style.less
@@ -7,10 +7,10 @@
         display: flex;
         margin-bottom: @margin-lg;
 
-        .MuiAlert-root {
+        .@{mui-prefix}Alert-root {
             width: 100%;
 
-            .MuiAlert-message {
+            .@{mui-prefix}Alert-message {
                 div {
                     word-break: break-word;
                     word-wrap: break-word;
@@ -20,6 +20,6 @@
     }
 
     .@{mui-prefix}FormControl-root:last-child {
-        margin-top: @margin-xxs;
+        margin-top: @margin-xxs!important;
     }
 }
