fix: Modify i18n smtp addr key

--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/style.less
@@ -4,6 +4,10 @@
     flex-direction: column;
     padding: 0;
 
+    .@{mui-prefix}Tabs-flexContainer {
+        height: 100%;
+    }
+
     .@{prefix}-tabs-content-ns {
         flex: 1;
         height: 0;
