--- a/apps/web/src/pages/integration/views/integration-detail/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/style.less
@@ -67,6 +67,10 @@
         flex-direction: column;
         height: 0;
 
+        .@{mui-prefix}Tabs-flexContainer {
+            height: 100%;
+        }    
+
         .@{prefix}-tabs-content {
             flex: 1;
             height: 0;
