fix: Avoid overlapping styles with the same class name

--- a/apps/web/src/plugin/components/chart-entity-position/style.less
+++ b/apps/web/src/plugin/components/chart-entity-position/style.less
@@ -1,4 +1,4 @@
-.@{prefix}-entity-assign-select {
+.@{prefix}-chart-entity-position.@{prefix}-entity-assign-select {
     padding: @padding-xxl 0;
 
     .list-content {
