fix: Optimized the ParamInputSelect component style

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
@@ -6,7 +6,7 @@
     }
 
     .@{mui-prefix}InputBase-root {
-        padding-right: @padding-xxs;
+        padding-right: @padding-xxs !important;
 
         .@{mui-prefix}IconButton-sizeSmall {
             padding: @padding-xxs;
