--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -90,6 +90,10 @@
         min-height: 0 !important;
         padding: 0 !important;
         background: var(--component-background);
+
+        .@{prefix}-sidebar-controller {
+            margin-left: @margin-sm;
+        }
     }
 
     &-widget-grid-edit {
