--- a/packages/shared/src/styles/variables.less
+++ b/packages/shared/src/styles/variables.less
@@ -89,3 +89,12 @@
 @icon-size-xl: 18px;
 @icon-size-xxl: 20px;
 @icon-size-base: 16px;
+
+// ---------- Breakpoints ----------
+@grid-breakpoints: {
+    xs: 0;
+    sm: 576px;
+    md: 768px;
+    lg: 992px;
+    xl: 1200px;
+};
