--- a/packages/shared/src/styles/mixins.less
+++ b/packages/shared/src/styles/mixins.less
@@ -65,4 +65,23 @@
     /* stylelint-enable */
 }
 
+// ---------- Breakpoints ----------
+/* stylelint-disable media-query-no-invalid */
+.media-breakpoint-up (@points, @content) {
+    @media (min-width: @points) {
+        @content();
+    }
+}
 
+.media-breakpoint-down (@points, @content) {
+    @media (max-width: @points) {
+        @content();
+    }
+}
+
+.media-breakpoint-between (@lower, @upper, @content) {
+    @media (min-width: @min) and (max-width: @max) {
+        @content();
+    }
+}
+/* stylelint-enable */
