--- a/apps/web/src/pages/auth/views/register/style.less
+++ b/apps/web/src/pages/auth/views/register/style.less
@@ -48,3 +48,12 @@
         }
     }
 }
+
+// Mobile Responsive
+.bp-down(@grid-breakpoints[sm], {
+    .@{prefix}-view-register .@{prefix}-auth-container {
+        width: calc(100% - 48px);
+        min-width: 350px;
+        padding: 48px 24px;
+    }
+});
