fix: Fix the gateway integration style

--- a/apps/web/src/pages/device/views/detail/style.less
+++ b/apps/web/src/pages/device/views/detail/style.less
@@ -53,11 +53,10 @@
     }
 
     &-table {
-        flex: 1;
-        height: 0;
+        height: calc(100% - 115px);
 
         & .@{prefix}-table-pro {
-            height: calc(100vh - 300px);
+            height: 100%;
         }
     }
 }
