--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/gateway-device/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/gateway-device/style.less
@@ -9,6 +9,10 @@
         height: 100%;
 
         .@{prefix}-ns-device-inner {
+            height: calc(100% - 96px)
+        }
+
+        .@{prefix}-ns-synced-device {
             height: 100%;
         }
 
