--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -125,6 +125,11 @@
                 font-weight: @font-weight-medium;
                 .text-size(@font-size-base);
 
+                .@{prefix}-asterisk {
+                    margin-right: @margin-xxs;
+                    color: var(--text-color-red);
+                }
+
                 .@{prefix}-tooltip {
                     display: flex;
                 }
