feat: component chart entity position not first child lable display none

--- a/apps/web/src/plugin/components/chart-entity-position/style.module.less
+++ b/apps/web/src/plugin/components/chart-entity-position/style.module.less
@@ -23,6 +23,10 @@
         align-items: center;
         margin-bottom: @margin-md;
 
+        &:not(:first-child) label {
+            display: none;
+        }
+
         :global {
             .@{mui-prefix}FormControl-root {
                 margin: 0;
