--- a/apps/web/src/plugin/plugins/area-chart/view/style.module.less
+++ b/apps/web/src/plugin/plugins/area-chart/view/style.module.less
@@ -5,11 +5,6 @@
     height: 100%;
     padding: @padding-md;
     background: var(--main-background);
-
-    canvas {
-        flex: 1;
-        width: 100%;
-    }
 }
 
 .area-chart-content {
@@ -19,6 +14,11 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+
+    &__chart {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .name {
