--- a/apps/web/src/plugin/plugins/gauge-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/gauge-chart/view/style.less
@@ -19,9 +19,11 @@
         justify-content: center;
         overflow: hidden;
 
-        canvas {
-            width: 100%;
-            height: 100%;
+        .ms-chart-content {
+            &__chart {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
