--- a/packages/shared/src/styles/variables.less
+++ b/packages/shared/src/styles/variables.less
@@ -93,8 +93,8 @@
 // ---------- Breakpoints ----------
 @grid-breakpoints: {
     xs: 0;
-    sm: 576px;
-    md: 768px;
-    lg: 992px;
-    xl: 1200px;
+    sm: 576px; // mobile
+    md: 768px; // tablet
+    lg: 992px; // desktop
+    xl: 1200px; // large desktop
 };
