feat: Replace the underlying library of the pir chart with echart

--- a/apps/web/src/plugin/plugins/pie-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/pie-chart/view/style.less
@@ -19,10 +19,11 @@
         justify-content: center;
         overflow: hidden;
 
-        canvas {
-            width: 100%;
-            height: 100%;
-            margin: @margin-md;
+        .ms-chart-content {
+            &__chart {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 
