--- a/apps/web/src/plugin/plugins/radar-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/radar-chart/view/style.less
@@ -19,15 +19,17 @@
         justify-content: center;
         overflow: hidden;
 
-        canvas {
-            width: 100%;
-            height: 100%;
+        .ms-chart-content {
+            &__chart {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
 
 .config-plugin-container-left-view {
-    .@{prefix}-radar-chart { 
+    .@{prefix}-radar-chart {
         canvas {
             width: 100%;
             height: 100%;
