--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -10,7 +10,14 @@
     }
 
     &.readonly {
+        .@{prefix}-workflow-panel-config-header {
+            .@{prefix}-editable-text {
+                pointer-events: none;
+            }
+        }
+
         .@{prefix}-node-form-group {
+            .@{mui-prefix}FormLabel-root,
             .@{prefix}-node-form-group-actions,
             .@{prefix}-node-form-group-item {
                 pointer-events: none;
