--- a/apps/web/src/plugin/plugins/line-chart/view/style.module.less
+++ b/apps/web/src/plugin/plugins/line-chart/view/style.module.less
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-width: 100%;
+    height: 100%;
     padding: @padding-md;
     background: var(--main-background);
 }
