feat: Adjust the line and bar chart configuration of the dashboard

--- a/apps/web/src/plugin/plugins/horizon-bar-chart/view/style.module.less
+++ b/apps/web/src/plugin/plugins/horizon-bar-chart/view/style.module.less
@@ -4,6 +4,10 @@
     min-width: 100%;
     padding: @padding-md;
     background: var(--main-background);
+
+    &__preview {
+        min-height: 400px;
+    }
 }
 
 .horizon-chart-content {
