--- a/apps/web/src/plugin/plugins/bar-chart/view/style.module.less
+++ b/apps/web/src/plugin/plugins/bar-chart/view/style.module.less
@@ -2,8 +2,13 @@
     display: flex;
     flex-direction: column;
     min-width: 100%;
+    height: 100%;
     padding: @padding-md;
     background: var(--main-background);
+
+    &__preview {
+        min-height: 400px;
+    }
 }
 
 .bar-chart-content {
