feat: Correct the data mapping error issues of charts such as line

--- a/apps/web/src/plugin/plugins/line-chart/view/style.module.less
+++ b/apps/web/src/plugin/plugins/line-chart/view/style.module.less
@@ -5,6 +5,10 @@
     height: 100%;
     padding: @padding-md;
     background: var(--main-background);
+
+    &__preview {
+        min-height: 400px;
+    }
 }
 
 .line-chart-content {
