feat: Add unit display to the tooltip of the line chart

--- a/apps/web/src/plugin/render/style.less
+++ b/apps/web/src/plugin/render/style.less
@@ -5,11 +5,21 @@
 
 .reset-chart-zoom {
     position: absolute;
-    top: 32px;
-    right: 8px;
+    top: 11px;
+    right: 10px;
     display: none;
     background-color: var(--white);
     border: @border-base;
     border-radius: @border-radius-xxl;
     cursor: pointer;
+}
+
+.dashboard-content-widget {
+    &:hover {
+        .reset-chart-zoom {
+            &--isEdit {
+                right: 89px;
+            }
+        }
+    }
 }
