--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/http-body-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/http-body-input/style.less
@@ -2,4 +2,11 @@
     .@{mui-prefix}FormControl-root:last-child {
         margin-bottom: 0;
     }
+
+    .helper-text {
+        display: block;
+        margin: -@margin-sm 0 @margin-md;
+        color: var(--text-color-tertiary);
+        .text-size(@font-size-sm);
+    }
 }
