--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -32,7 +32,8 @@
             flex: 1;
             max-width: calc(100% / 2);
 
-            .@{mui-prefix}InputBase-root {
+            .@{mui-prefix}InputBase-root,
+            .@{mui-prefix}InputBase-root .@{mui-prefix}InputBase-input {
                 padding-right: @padding-xxs;
                 padding-left: @padding-xxs;
             }
