feat: Add ai-integration configuration and service pages

--- a/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
@@ -2,7 +2,7 @@
     padding: @padding-lg;
     background-color: var(--component-background);
     border: 1px solid transparent;
-    border-radius: @border-radius-sm;
+    border-radius: @border-radius-md;
     cursor: pointer;
     transition: .3s;
 
