--- a/packages/shared/src/components/toast/style.less
+++ b/packages/shared/src/components/toast/style.less
@@ -8,6 +8,11 @@
 
     .text-size(@font-size-base);
 
+    // Multiple error line breaks
+    &-content {
+        white-space: pre-line;
+    }
+
     &-icon {
         display: flex;
         align-items: center;
