--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -30,12 +30,19 @@
         > .@{prefix}-param-input-select,
         > .@{mui-prefix}FormControl-root {
             flex: 1;
-            max-width: calc(100% / 2);
+            max-width: calc(100% / 2 - 30px);
 
             .@{mui-prefix}InputBase-root,
             .@{mui-prefix}InputBase-root .@{mui-prefix}InputBase-input {
                 padding-right: @padding-xxs;
                 padding-left: @padding-xxs;
+            }
+        }
+
+        > .@{prefix}-param-select {
+            .@{mui-prefix}InputBase-root, 
+            .@{mui-prefix}InputBase-root .@{mui-prefix}InputBase-input {
+                padding-right: @padding-sm;
             }
         }
 
