feat: Add ai inference integration content of device bind module

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -275,10 +275,17 @@ label.@{mui-prefix}FormControlLabel-root {
     }
 
     .@{mui-prefix}FormControlLabel-label {
-        display: inline-block;
+        display: inline-flex;
+        align-items: center;
         margin-bottom: @margin-xxs;
         color: var(--text-color-primary);
         .text-size(@font-size-md);
+
+        .@{prefix}-form-label-help {
+            display: flex;
+            align-items: center;
+            margin-left: @margin-xxs;
+        }
     }
 
     .@{mui-prefix}FormControlLabel-asterisk {
@@ -322,14 +329,29 @@ label.@{mui-prefix}FormControlLabel-root {
     }
 
     .@{mui-prefix}FormLabel-root {
-        position: unset;
+        position: relative;
         display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-end;
         margin-bottom: @margin-xxs;
         color: var(--text-color-primary);
         transform: unset;
         .text-size(@font-size-md);
+
+        .@{mui-prefix}FormLabel-asterisk {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+        }
+
+        .@{prefix}-form-label-help {
+            display: flex;
+            align-items: center;
+            margin-left: @margin-xxs;
+        }
+
+        &:has(.@{mui-prefix}FormLabel-asterisk) {
+            padding-left: @padding-xs;
+        }
 
         &.@{mui-prefix}-focused {
             color: var(--text-color-primary);
@@ -337,10 +359,6 @@ label.@{mui-prefix}FormControlLabel-root {
 
         &.@{mui-prefix}-disabled {
             color: var(--text-color-primary);
-        }
-
-        .@{mui-prefix}FormLabel-asterisk {
-            margin-right: @margin-xxs;
         }
 
         &.@{mui-prefix}-error {
