--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/style.less
@@ -3,4 +3,10 @@
     padding: @padding-lg;
     background-color: var(--component-background);
     border-radius: @border-radius-base;
+
+    .@{prefix}-image-cell {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
