--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/device-bind/style.less
@@ -4,7 +4,7 @@
     background-color: var(--component-background);
     border-radius: @border-radius-base;
 
-    .@{prefix}-image-cell {
+    .@{prefix}-center-cell {
         display: flex;
         align-items: center;
         justify-content: center;
