--- a/apps/web/src/pages/integration/views/integration-detail/components/ai-content/service/test-modal/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ai-content/service/test-modal/style.less
@@ -70,15 +70,9 @@
                     border-bottom: 1px solid var(--border-color-base);
                     .text-size(@font-size-base);
 
-                    .@{mui-prefix}ToggleButtonGroup-root {
+                    .@{prefix}-toggle-button-group {
                         width: 124px;
                         margin: 0;
-
-                        .@{mui-prefix}ToggleButtonGroup-grouped {
-                            padding-top: 2px;
-                            padding-bottom: 2px;
-                            .text-size(@font-size-sm);
-                        }
                     }
 
                     &-title {
