feat: TablePro supports column fixed and row virtualization

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -189,9 +189,9 @@
             background-color: var(--gray-1);
         }
 
-        .@{mui-prefix}DataGrid-virtualScrollerContent {
-            overflow-y: hidden;
-        }
+        // .@{mui-prefix}DataGrid-virtualScrollerContent {
+        //     overflow-y: hidden;
+        // }
 
         .@{mui-prefix}DataGrid-columnHeaders {
             .@{mui-prefix}DataGrid-row--borderBottom {
